@@ -1,0 +1,3 @@
+start
+AWS.NET.SOCKET_ERROR
+error:02001002:system library:fopen:No such file or directory
